# token-fairness

./: .gitignore  Cargo.toml  rust-toolchain.toml
.claude/: welcome.md
.claude-plugin/: marketplace.json
.claude/agent-memory/foundry-reviewer/: MEMORY.md  budget-baseline-unit-migration.md  project_dual-session-tokens.md  project_spend-safety-review-lens.md
.foundry/: governance.md
.github/workflows/: release.yml  verify.yml
assets/: dashboard.html
crates/tf-cli/: Cargo.toml
crates/tf-cli/src/: dashboard_run.rs  main.rs  mcp_server.rs
crates/tf-cli/tests/: dashboard.rs  mcp.rs  stateful.rs
crates/tf-core/: Cargo.toml
crates/tf-core/src/: budget.rs  dashboard.rs  ledger.rs  lib.rs  mcp.rs  observe.rs  report.rs  scheduler.rs  snapshot.rs  spend.rs  state.rs  telemetry.rs  windows.rs
doc/: PHASE_C_GAP_MAP.md  ROADMAP.md  SPECIFICATION.ears.md  STUPID_LESSONS_PAY_STUPID_PRICES.md  [1]_MCP_SERVER_TELEMETRY_DASHBOARD_PLAN.md  dashboard.feature  experiment-cross-model-seeding.md  mcp-gap-map.md  mcp.feature
doc/design/: router-uplift.md  spend-safety-enforcement.md
doc/design/adr/: ADR-001-mcp-transport.md  ADR-002-dashboard-architecture.md  ADR-003-telemetry-pipeline.md  ADR-004-chart-rendering.md  docker-compose.grafana.yml
doc/learnings/2026-06-13-workflow-fanout-cap-bypass/: README.md  incident-report.md  proposed-solutions.md
doc/original-docs/: README.md  REVIEW_TOKEN_GUARD_FAILURE.md
doc/plans/: features-upgrades-plan.md
plugins/scheduler/: .mcp.json
plugins/scheduler/.claude-plugin/: plugin.json
plugins/scheduler/hooks/: ensure-statusline-widget.sh  hooks.json  session-tokens.sh  spend-capture-throttled.sh  startup-report.sh  statusline-ratelimit-widget.sh  tf-hook.sh
plugins/scheduler/knowledge/: token-aware-scheduling.md
plugins/scheduler/skills/token-scheduler/: SKILL.md
scripts/: verify-prereqs.sh
