[workspace]
members = ["crates/tf-core", "crates/tf-cli"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentic-underground/token-fairness"

# A scheduler that runs on hot hooks wants the smallest, fastest binary we can ship.
[workspace.dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
