[package]
name = "tf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tf"
path = "src/main.rs"

[features]
# MCP server surface (feature-gated to protect hook binary size). The stdio JSON-RPC loop is
# hand-rolled on std::io — no rmcp/tokio — so the binary stays small (see mcp_server.rs / H6).
mcp = ["tf-core/mcp"]
# Dashboard and telemetry pipeline (feature-gated to protect hook binary size)
dashboard = ["axum", "tokio", "notify", "tf-core/dashboard"]

[dependencies]
tf-core = { path = "../tf-core" }
# libc only for the single-instance flock in `run-offpeak` (the OS-cron entry point);
# a single syscall, negligible binary-size cost.
libc = "0.2"
# Dashboard and telemetry support (optional, feature-gated)
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
notify = { version = "6", optional = true }
# serde_json used by CLI for JSON formatting/parsing
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
# WebSocket client + async stream combinators for the /ws integration tests.
# tokio-tungstenite 0.24 is the same version axum 0.7's `ws` feature pulls transitively,
# so this adds no new version to the lockfile.
tokio-tungstenite = "0.24"
futures-util = "0.3"
